--- a/day13/index.html
+++ b/day13/index.html
@@ -10,7 +10,7 @@
       body {
         font-family: Arial, sans-serif;
         padding: 20px;
-        max-width: 400px;
+        max-width: fit-content;
         margin: auto;
       }
       h2 {
