--- a/day13/index.html
+++ b/day13/index.html
@@ -9,9 +9,10 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        padding: 20px;
+        padding-top: 25%;
         max-width: fit-content;
         margin: auto;
+        font-size: xx-large;
       }
       h2 {
         display: flex;
@@ -24,12 +25,19 @@
         background: #f5f5f5;
         border-radius: 8px;
       }
+      input[type="date"] {
+        padding: 8px;
+        font-size: x-large;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+      }
       button {
-        padding: 8px 16px;
+        padding: 8px 86px;
         border: 1px solid #0055cc;
         background: white;
         cursor: pointer;
         border-radius: 6px;
+        font-size: xx-large;
       }
       button:hover {
         background: #eef5ff;
