fix: padding-top: 25vh;

--- a/day13/index.html
+++ b/day13/index.html
@@ -9,7 +9,7 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        padding-top: 25%;
+        padding-top: 25vh;
         max-width: fit-content;
         margin: auto;
         font-size: xx-large;
