--- a/day13/index.html
+++ b/day13/index.html
@@ -101,27 +101,22 @@
         <div id="result" class="result" style="display:none;"></div>
     </div>
 
-    <!-- 資料暫存 開始 -->
+   <!-- 資料暫存 開始 -->
     <script>
-        const KEY = 'my-note';
-        const input = document.getElementById('note-input');
-        const saveBtn = document.getElementById('save-btn');
-        const display = document.getElementById('display');
+        const KEY = 'dog-birthday';
+        const dobInput = document.getElementById('dob');
 
-        // 第一次進來頁面時，先試著把舊資料拿出來
-        const saved = localStorage.getItem(KEY);
-        if (saved) {
-        input.value = saved;
-        display.textContent = '目前儲存的文字：' + saved;
-        }
+        // 頁面載入時，讀取之前儲存的生日
+        window.addEventListener('DOMContentLoaded', function() {
+            const saved = localStorage.getItem(KEY);
+            if (saved) {
+                dobInput.value = saved;
+            }
+        });
 
-        // 按下儲存，就把文字存進 localStorage
-        saveBtn.addEventListener('click', function () {
-        const text = input.value;
-        localStorage.setItem(KEY, text);
-        display.textContent = text
-            ? '目前儲存的文字：' + text
-            : '目前還沒有儲存任何文字。';
+        // 當日期改變時，自動儲存
+        dobInput.addEventListener('change', function() {
+            localStorage.setItem(KEY, dobInput.value);
         });
     </script>
     <!-- 資料暫存 結束 -->
